# steps_recorder

./: .gitignore  README.md  StepsRecorder.spec  main.py  pyproject.toml  requirements.txt  steps_recorder.py
.github/workflows/: ci.yml
steps_recorder/: __init__.py  __main__.py  ai.py  config.py  deps.py  element.py  exporters.py  models.py  recorder.py  winutil.py
steps_recorder/gui/: clarify.py  main_window.py  review.py  settings.py  theme.py  viewer.py
tests/: test_ai_clarify.py  test_ai_html.py  test_ai_loop.py  test_ai_parsing.py  test_apply_ai.py  test_config.py  test_element.py  test_exports.py  test_models.py  test_recording_logic.py
