[project]
name = "steps-recorder"
version = "2.0.0"
description = "Ghi lại thao tác người dùng (click, phím gõ, ảnh chụp màn hình) và biên soạn thành tài liệu hướng dẫn"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E501",  # dòng dài (HTML template, chuỗi tiếng Việt)
    "E731",  # lambda gán biến — idiom phổ biến với callback tkinter
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = false
files = ["steps_recorder"]

[[tool.mypy.overrides]]
module = "steps_recorder.gui.*"
ignore_errors = true
